[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enhance-forward"
version = "0.1.0"
description = "A basic FastAPI application"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.0.0",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi"
]

[project.urls]
Homepage = "https://github.com/anthonyshaw/enhance-forward"
Repository = "https://github.com/anthonyshaw/enhance-forward.git"
Issues = "https://github.com/anthonyshaw/enhance-forward/issues"
